[project]
name = "hph-medvision-channel"
version = "0.1.0"  # semantic-release
description = "MedVision skill channel for HiperHealth — Medical image analysis with explainable AI"
readme = "README.md"
authors = [
  {name = "Chandan K T", email = "cktofficial24@gmail.com"}
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10,<4"
dependencies = [
    "hiperhealth >=0.6.0",
    "monai >=1.3.1",
    "torch >=2.0.1",
    "torchvision >=0.15.1",
    "numpy >=1.26.1",
    "pillow >=11.0.1",
    "scikit-learn >=1.3.1",
]

[project.urls]
Homepage = "https://github.com/hiperhealth/hph-medvision-channel"
Issues = "https://github.com/hiperhealth/hph-medvision-channel/issues"

[build-system]
requires = ["setuptools>=70.1.0,<82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "skills*"]

[project.optional-dependencies]
dev = [
  "pytest >=7.3.2",
  "pytest-cov >=4.1.0",
  "coverage >=7.2.7",
  "pre-commit >=3.3.2",
  "ruff >=0.2.0",
  "mypy >=1.5.0,<2",
  "bandit >=1.7.5",
  "vulture >=2.7",
  "makim >=1.27.0",
  "tomli; python_version < '3.11'",
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.mypy]
python_version = "3.10"
allow_subclassing_any = true
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["scripts/", "tests/"]
plugins = [
  "pydantic.mypy",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    # Ignore deprecation warnings from third-party libraries by default
    "ignore::DeprecationWarning",
    # Enable deprecation warnings for our own modules to catch issues early
    "default::DeprecationWarning:shared",
    "default::DeprecationWarning:skills",
    "default::DeprecationWarning:tests",
]

[tool.ruff]
target-version = "py310"
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]
fix = true

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "YTT",  # flake8-2020
  "RUF",  # Ruff-specific rules
  "I001", # isort
]
extend-select = [
  "UP006",  # Prefer builtin generics in annotations
  "UP007",  # Prefer | syntax for unions and optionals
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["./", "vulture_whitelist.py"]
sort_by_size = true
verbose = false
